# fastapi-users-firebase

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  release.yml  validate-codecov-config.yml
docs/: index.md  modules.md
fastapi_users_firebase/: __init__.py  id_token.py  manager.py  schemas.py  user.py  user_database.py  user_store.py
tests/: conftest.py  test_foo.py  test_id_token_strategy.py  test_user_store.py
