[tool.poetry]
name = "fastapi_users_firebase"
version = "0.0.1"
description = "This is a plugin for the FastAPI Users library to integrate Firebase Authentication to the app."
authors = ["Francisco Del Roio <ffrancipvb@hotmail.com>"]
repository = "https://github.com/francipvb/fastapi-users-firebase"
documentation = "https://francipvb.github.io/fastapi-users-firebase/"
readme = "README.md"
packages = [{ include = "fastapi_users_firebase" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi-users = "^12.1.3"
firebase-admin = "^6.4.0"
anyio = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
ruff = "^0.2.2"
faker = "^23.2.1"
trio = "^0.24.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["fastapi_users_firebase"]
follow_imports = "silent"
disable_error_code = ["import-untyped"]


[tool.pyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
  # Documentation-related
  "D",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "S101"]

[tool.ruff.format]
preview = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["fastapi_users_firebase"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
