[tool.poetry]
name = "fastapi_users_firebase"
version = "0.0.0.post30.dev0+1bfc5f2"
description = "This is a plugin for the FastAPI Users library to integrate Firebase Authentication to the app."
authors = ["Francisco Del Roio <ffrancipvb@hotmail.com>"]
repository = "https://github.com/francipvb/fastapi-users-firebase"
documentation = "https://francipvb.github.io/fastapi-users-firebase/"
readme = "README.md"
packages = [{ include = "fastapi_users_firebase" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi-users = "^12.1.3"
firebase-admin = "^6.4.0"
anyio = "^4.3.0"
pydantic = ">=2.0.1,<3.0.0"
pydantic-extra-types = "*"
phonenumbers = "^8.13.30"
typing-extensions = ">=4.1.0"
fastapi = ">=0.65.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
pre-commit = "^3.5.0"
tox = "^4.11.1"
ruff = "^0.2.2"
faker = "^23.2.1"
trio = "^0.24.0"
pyright = "^1.1.351"
phone-gen = "^2.4.2"
git-cliff = "^2.0.4"
dunamai = "^1.19.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["fastapi_users_firebase"]
follow_imports = "silent"
disable_error_code = ["import-untyped"]
python_version = "3.8"


[tool.pyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
pythonVersion = "3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
  # Documentation-related
  "D",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "S101"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["fastapi_users_firebase"]


[tool.deptry.per_rule_ignores]
DEP002 = ["phonenumbers"]
